crates/board-tui/tests/snapshots/snapshots__card_detail_history_scrolled.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 120, 35)"
---
" ◈ herdr-board ● 1 running          [ Global ▾ ]                   [ main ▾ ]            [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ─────────┐┌ PLAN · AUTO · 1 ───────────┐┌ EXECUTE · AUTO · 2 ────────┐┌ REVIEW · AUTO · 2 ─────────┐"
"┌ Card #5: Refactor auth module                                                                             [ X ] [ □ ]┐"
"│┌Status────────────────────────────────┐ ┌Runs────────────────────────────────────────┐ ┌Comments────────────────────┐│"
"││✗ failed                              │ │ #2 claude · ok · 0s · default/p2           │ │ [agent:1] Plan ready at    ││"
"│└──────────────────────────────────────┘ │ #3 claude · fail · 0s · default/p3         │ │docs/plans/auth.md          ││"
"│┌Task Configuration────────────────────┐ │ #5 claude · ok · 0s · default/no pane      │ │ [agent:2] Reviewer: tests  ││"
"││Harness · Model: claude · opus ·      │ │ #6 claude · ok · 0s · default/no pane      │ │missing for token refresh   ││"
"││effort medium · perm plan             │ │ #7 claude · ok · 0s · default/no pane      │ │ [system] Refactor failed in││"
"│└──────────────────────────────────────┘ │ #8 claude · ok · 0s · default/no pane      │ │3m10s -> Execute            ││"
"│┌Session───────────────────────────────┐ │ #9 claude · ok · 0s · default/no pane      │ │ [test] overflow comment 0  ││"
"││Herdr session: default session ·      │ │ #10 claude · ok · 0s · default/no pane     │ │ [test] overflow comment 1  ││"
"││Space: workspace:-                    │ │ #11 claude · ok · 0s · default/no pane     │ │ [test] overflow comment 2  ││"
"│└──────────────────────────────────────┘ │▸#12 claude · ok · 0s · default/no pane     │ │ [test] overflow comment 3  ││"
"│┌Description───────────────────────────┐ │ #13 claude · ok · 0s · default/no pane     │ │ [test] overflow comment 4  ││"
"││Split the auth module into token +    │ │ #14 claude · ok · 0s · default/no pane     │ │ [test] overflow comment 5  ││"
"││session layers.                       │ │                                            │ │ [test] overflow comment 6  ││"
"││                                      │ │                                            │ │ [test] overflow comment 7  ││"
"││                                      │ │                                            │ │ [test] overflow comment 8  ││"
"││                                      │ │                                            │ │ [test] overflow comment 9  ││"
"││                                      │ │                                            │ │ [test] overflow comment 10 ││"
"││                                      │ │                                            │ │ [test] overflow comment 11 ││"
"││                                      │ │                                            │ │ [test] overflow comment 12 ││"
"││                                      │ │                                            │ │ [test] overflow comment 13 ││"
"││                                      │ │                                            │ │ [test] overflow comment 14 ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"│└──────────────────────────────────────┘ │ [ Open ]  [ Reopen ]  [ Retry ]  [ Cancel ]│ │      [ Add comment ]       ││"
"│[ Edit card ][ Duplicate ]  [ Archive ]  └────────────────────────────────────────────┘ └────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] [ + Column ]  [ Edit col ]  [ Del col ] [ Move col ]  [ Template ]  [ ? Help ]  "
