crates/board-tui/tests/snapshots/snapshots__card_detail_metadata_ellipsis_40x20.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: compact
---
"[ Project: Gl… ] [ Act ] [ All ] [ Arc ]"
"            [ Board: main ]             "
"[ ‹ ] [ Todo (M) · 1/6 · 2 cards ] [ › ]"
"────────────────────────────────────────"
"┌ Card #9: Long metadata v… [ X ] [ □ ]┐"
"│┌Status──────────────────────────────┐│"
"││· idle                              ││"
"│└────────────────────────────────────┘│"
"│┌Task Configuration──────────────────┐│"
"││Harness · Model: pi · model-with-a-…││"
"││Herdr session: session-with-a-very-…││"
"│└────────────────────────────────────┘│"
"│ [ Edit ]  [ Duplicate ]  [ Archive ] │"
"│               [ Add ]                │"
"│ [ Open ]    [ Reopen ]    [ Retry ]  │"
"│              [ Cancel ]              │"
"└──────────────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] "
"[ + Column ]  [ Edit col ]  [ Del col ] "
"[ Move col ]  [ Template ]  [ ? Help ]  "
