crates/board-tui/tests/snapshots/snapshots__card_detail_metadata_wrap_120x35.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: wide
---
" ◈ herdr-board ● 1 running          [ Global ▾ ]                   [ main ▾ ]            [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 2 ─────────┐┌ PLAN · AUTO · 1 ───────────┐┌ EXECUTE · AUTO · 2 ────────┐┌ REVIEW · AUTO · 2 ─────────┐"
"┌ Card #9: Long metadata values                                                                             [ X ] [ □ ]┐"
"│┌Status────────────────────────────────┐ ┌Runs────────────────────────────────────────┐ ┌Comments────────────────────┐│"
"││· idle                                │ │(no runs)                                   │ │(no comments)               ││"
"│└──────────────────────────────────────┘ │                                            │ │                            ││"
"│┌Task Configuration────────────────────┐ │                                            │ │                            ││"
"││Harness · Model: pi ·                 │ │                                            │ │                            ││"
"││model-with-a-very-long-name · effort  │ │                                            │ │                            ││"
"││max · perm                            │ │                                            │ │                            ││"
"││permission-mode-with-a-very-long-name │ │                                            │ │                            ││"
"│└──────────────────────────────────────┘ │                                            │ │                            ││"
"│┌Session───────────────────────────────┐ │                                            │ │                            ││"
"││Herdr session:                        │ │                                            │ │                            ││"
"││session-with-a-very-long-name · Space:│ │                                            │ │                            ││"
"││workspace:workspace-with-a-very-long-r│ │                                            │ │                            ││"
"││eference                              │ │                                            │ │                            ││"
"│└──────────────────────────────────────┘ │                                            │ │                            ││"
"│┌Description───────────────────────────┐ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"│└──────────────────────────────────────┘ │ [ Open ]  [ Reopen ]  [ Retry ]  [ Cancel ]│ │      [ Add comment ]       ││"
"│[ Edit card ][ Duplicate ]  [ Archive ]  └────────────────────────────────────────────┘ └────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] [ + Column ]  [ Edit col ]  [ Del col ] [ Move col ]  [ Template ]  [ ? Help ]  "
