crates/board-tui/tests/snapshots/snapshots__card_detail_popup_120x35.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 120, 35)"
---
" ◈ herdr-board ● 1 running          [ Global ▾ ]                   [ main ▾ ]            [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ─────────┐┌ PLAN · AUTO · 1 ───────────┐┌ EXECUTE · AUTO · 2 ────────┐┌ REVIEW · AUTO · 2 ─────────┐"
"┌ Card #5: Refactor auth module                                                                             [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││✗ failed                                                                                                            ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Harness · Model: claude · opus · effort medium · perm plan                                                          ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Herdr session: default session · Space: workspace:-                                                                 ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Description─────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Split the auth module into token + session layers.                                                                  ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│             [ Edit card ]                        [ Duplicate card ]                      [ Archive card ]            │"
"│┌Comments ↑──────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││ [agent:2] Reviewer: tests missing for token refresh                                                                ││"
"││▸[system] Refactor failed in 3m10s -> Execute                                                                       ││"
"││                                                                                                                    ││"
"││      [ Add comment ]              [ Edit comment ]             [ Delete comment ]               [ History ]        ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Runs ↑──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││ #3 claude · fail · 0s · default/p3                                                                                 ││"
"││      [ Open worker ]           [ Reopen conversation ]             [ Retry ]                    [ Cancel ]         ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] [ + Column ]  [ Edit col ]  [ Del col ] [ Move col ]  [ Template ]  [ ? Help ]  "
