crates/board-tui/tests/snapshots/snapshots__card_detail_wrap_popup_120x35.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 120, 35)"
---
" ◈ herdr-board ● 1 running          [ Global ▾ ]                   [ main ▾ ]            [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 2 ─────────┐┌ PLAN · AUTO · 1 ───────────┐┌ EXECUTE · AUTO · 2 ────────┐┌ REVIEW · AUTO · 2 ─────────┐"
"┌ Card #9: Wrap demo                                                                                        [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││· idle                                                                                                              ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Harness · Model: claude · default model · effort default effort · perm default permission                           ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Herdr session: default session · Space: workspace:-                                                                 ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Description─────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││This description is intentionally long so it must word-wrap across several rendered rows at the panel borders       ││"
"││instead of being cut off, both inside the centered popup and inside the fullscreen detail view.                     ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│             [ Edit card ]                        [ Duplicate card ]                      [ Archive card ]            │"
"│┌Comments ↑──────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││      [ Add comment ]              [ Edit comment ]             [ Delete comment ]               [ History ]        ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Runs────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││      [ Open worker ]           [ Reopen conversation ]             [ Retry ]                    [ Cancel ]         ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] [ + Column ]  [ Edit col ]  [ Del col ] [ Move col ]  [ Template ]  [ ? Help ]  "
