crates/board-tui/tests/snapshots/snapshots__card_detail_wrap_popup_80x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
" ◈ herdr-board ● 1 running [ Glo… ▾ ][ main ▾ ]  [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ Card #9: Wrap demo                                                [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────────────────────────────────┐│"
"││· idle                                                                      ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────────────────────────────────┐│"
"││Harness · Model: claude · default model · effort default effort · perm      ││"
"││default permission                                                          ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────────────────────────────────┐│"
"││Herdr session: default session · Space: workspace:-                         ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│      [ Edit card ]           [ Duplicate card ]         [ Archive card ]     │"
"│┌Comments ↑──────────────────────────────────────────────────────────────────┐│"
"││demonstrating per-comment word wrap at the section border.                  ││"
"││ [ Add comment ]    [ Edit comment ]   [ Delete comment ]     [ History ]   ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Runs────────────────────────────────────────────────────────────────────────┐│"
"││ [ Open worker ]       [ Reopen ]          [ Retry ]          [ Cancel ]    ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
