crates/board-tui/tests/snapshots/snapshots__column_form_hostile.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: hostile_output
---
"┌ New column  ·  f: fullscreen  ·  Tab: field · Enter: save · Esc: cancel ─────┐"
"│┌───────────────────────────────────────────────────────────────────────────┐▲│"
"│▌ name                                                                       █│"
"│▏                                                                            █│"
"│  trigger                                                                    █│"
"│[‹]  manual  [›]                                                             █│"
"│┌───────────────────────────────────────────────────────────────────────────┐█│"
"│  on success                                                                 █│"
"│[‹]  none  [›]                                                               █│"
"│  on fail                                                                    █│"
"│[‹]  none  [›]                                                               █│"
"│  fresh session                                                              ││"
"│[‹]  no  [›]                                                                 ││"
"│┌───────────────────────────────────────────────────────────────────────────┐││"
"│  model override                                                             ││"
"│                                                                             ││"
"│  effort override                                                            ││"
"│[‹]  (default)  [›]                                                          ││"
"│  harness override                                                           ││"
"│[‹]  none  [›]                                                               ││"
"│                                                                             ▼│"
"│               [ Save ]                              [ Cancel ]               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Tab fields · Enter save · Esc cancel                                            "
