crates/board-tui/tests/snapshots/snapshots__column_form_trigger_auto.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
" ◈ herdr-board ● 1 running     [ Global ▾ ]      [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ New column  ·  f: fullscreen  ·  Tab: field · Enter: save · Esc: cancel ─────┐"
"│┌ Definition ───────────────────────────────────────────────────────────────┐▲│"
"││▌ name                                                                     │█│"
"││▏                                                                          │█│"
"││  trigger                                                                  │█│"
"││[ ‹ ]  auto  [ › ]                                                         │█│"
"││  system prompt [ $EDITOR ]                                                │█│"
"││                                                                           │││"
"││                                                                           │││"
"││                                                                           │││"
"││                                                                           │││"
"│└───────────────────────────────────────────────────────────────────────────┘││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ▼│"
"│               [ Save ]                              [ Cancel ]               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
