crates/board-tui/tests/snapshots/snapshots__comment_history_40x20.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, 40, 20)"
---
"┌ History ─────────────────────────[×]─┐"
"│#1 2026-07-14 12:00:00                │"
"│first draft of the note               │"
"│#2 2026-07-14 12:01:00                │"
"│revised wording of the note           │"
"│#3 2026-07-14 12:02:00                │"
"│final text of the note                │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
"? help                                  "
